kubernetes_batch2/ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: http-echo
        image: hashicorp/http-echo
        args: 
        - "-text=Hello from nginx controller"
        ports:
        - containerPort: 5678
