kubernetes_batch2/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  labels:
    app.kubernetes.io/name: hello-ingress
spec:
  rules:
  - host: hello.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-service
            port: 
              number: 80
